# AppliedComputerVision

./: .gitignore  MASTER_REFERENCE.cpp
HW2/: canny.cpp  capture.cpp  super_capture.cpp
HW3/: bg_elim.cpp  capture_HU.cpp  houghCirc.cpp
background_elemination/: CMakeLists.txt  bg_elim.cpp  bg_elim_stream.cpp  bottom_up.cpp  conv_gray.cpp
background_elemination/videos/: Screencast from 03-04-2026 01:14:56 PM.webm  Screencast from 03-04-2026 12:59:28 PM.webm
conts_trans/: CMakeLists.txt  HU_lines.cpp  people_detec.cpp  pyrUpDown.cpp  skel_transform.cpp  skeletal.cpp
edge_detection/: CMakeLists.txt  simple_capture.c
midterm/: Makefile  sharpen
midterm/q2/: pthread
midterm/q3/: canny  houghcirc  houghcirc.cpp  houghline
midterm2/: Makefile  sharpen_grid
